--- a/spec/dummy/app/views/tenon/posts/_form.html.haml
+++ b/spec/dummy/app/views/tenon/posts/_form.html.haml
@@ -6,22 +6,22 @@
         .toolbar__actions.toolbar__actions--right
           - if can?(:publish, @post)
             .toolbar__action
-              %button.btn.toolbar__btn.submit{ data: { disable_with: "Please wait..." } } Save
+              %button.btn.btn--toolbar.submit{ data: { disable_with: "Please wait..." } } Save
 
           .toolbar__action
             %a.action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
               = i('more_vert')
 
-          %ul.dropdown#form-dropdown
-            - if can?(:create, Tenon::ItemVersion)
-              = render 'tenon/shared/draft_controls', obj: @post
+            %ul.dropdown#form-dropdown
+              - if can?(:create, Tenon::ItemVersion)
+                = render 'tenon/shared/draft_controls', obj: @post
 
-            - if @post.persisted?
-              %li.dropdown__divider
-              %li.dropdown__item
-                = link_to @post, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'dropdown__action action-icon delete-link' do
-                  = i('delete')
-                  %span Delete
+              - if @post.persisted?
+                %li.dropdown__divider
+                %li.dropdown__item
+                  = link_to @post, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'dropdown__action action-icon delete-link' do
+                    = i('delete')
+                    %span Delete
 
 
     %main
