Switch to Pundit for ACL and add documentation

--- a/app/views/tenon/assets/_form.html.haml
+++ b/app/views/tenon/assets/_form.html.haml
@@ -4,7 +4,7 @@
       = render 'tenon/shared/breadcrumbs'
       .toolbar__content
         .toolbar__actions.toolbar__actions--right
-          - if can?(:publish, @asset)
+          - if policy(@asset).publish?
             %button.btn.toolbar__btn.submit{ data: { disable_with: "Please wait..." } } Save
 
           .toolbar__action
