--- a/spec/dummy/app/views/tenon/shared/menu_items/_comments.html.haml
+++ b/spec/dummy/app/views/tenon/shared/menu_items/_comments.html.haml
@@ -1,2 +1,2 @@
-- if can?(:index, Comment)
+- if policy(Comment).index?
   = tenon_menu_item "Comments", comments_path, :active => is_active("comments"), :submenu => false
