--- a/spec/dummy/app/views/tenon/shared/menu_items/_events.html.haml
+++ b/spec/dummy/app/views/tenon/shared/menu_items/_events.html.haml
@@ -1,6 +1,6 @@
-- if can?(:index, Event)
-  = tenon_menu_item item, events_path, :active => is_active("events"), :submenu => can?(:create, Event)
-  - if can?(:create, Event)
+- if policy(Event).index?
+  = tenon_menu_item item, events_path, :active => is_active("events"), :submenu => policy(Event).create?
+  - if policy(Event).create?
     %ul.tenon_submenu{ :class => is_active(["events"]) ? "#{item} active" : item }
       = link_to "New Event", new_event_path, :class => ("active" if is_active(["events"]) && params[:action] == "new")
     .spacer
