--- a/lib/generators/tenon/scaffold/templates/view__form.html.haml
+++ b/lib/generators/tenon/scaffold/templates/view__form.html.haml
@@ -2,14 +2,14 @@
   .toolbar.bg-color-primary-dk10
     = render 'tenon/shared/breadcrumbs'
     .actions
-      - if can?(:publish, @<%= singular_name %>)
+      - if policy(@<%= singular_name %>).publish?
         %button.action-btn.btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
 
       %a.action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
         = i('more_vert')
 
       %ul.dropdown#form-dropdown
-        - if can?(:create, Tenon::ItemVersion)
+        - if policy(Tenon::ItemVersion).create?
           = render 'tenon/shared/draft_controls', obj: @<%= singular_name %>
 
         - if @<%= singular_name %>.persisted?
