--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -70,9 +70,11 @@
 @import './modules/modal';
 @import './modules/modal-overlay';
 @import './modules/panel';
+@import './modules/panel-label';
 @import './modules/progress';
 @import './modules/record';
 @import './modules/search-content';
+@import './modules/tabs';
 @import './modules/tn-content';  // bem: todo
 @import './modules/tn-embed-code';  // bem: todo
 @import './modules/tn-tc-library';  // bem: todo
