--- a/app/views/tenon/styleguides/colors/_variables.html.haml
+++ b/app/views/tenon/styleguides/colors/_variables.html.haml
@@ -2,12 +2,12 @@
   %a.scroll-target{name: 'color__variables'}
   %h3.color-black Color variables
 
-  .panel.panel--block
+  .panel.panel--padded
     %h4 Names
     %p
       These are the 10 base colors that are used throughtout Tenon.
       You can over-ride any of these to change the look of Tenon.
-      
+
     %code
       %span.color-primary Source:
       app/assets/stylesheets/tenon/variables/base-colors.scss
