--- a/app/views/tenon/styleguides/forms/_tenon_content.html.haml
+++ b/app/views/tenon/styleguides/forms/_tenon_content.html.haml
@@ -2,7 +2,7 @@
   %a.scroll-target{name: 'forms__tenon'}
   %h3.color-black Tenon content
 
-  .panel.panel--block
+  .panel.panel--padded
     = f.tenon_content :content
     %code
       %p f.tenon_content :content
