--- a/app/views/tenon/styleguides/typography/_lists.html.haml
+++ b/app/views/tenon/styleguides/typography/_lists.html.haml
@@ -2,7 +2,7 @@
   %a.scroll-target{name: 'typography__ulists'}
   %h3.color-black Unordered lists
 
-  .panel.panel--block
+  .panel.panel--padded
     %ul
       %li List item
       %li List item
@@ -22,7 +22,7 @@
 %section
   %a.scroll-target{name: 'typography__olists'}
   %h3.color-black Ordered lists
-  .panel.panel--block
+  .panel.panel--padded
     %ol
       %li List item
       %li List item
