--- a/app/views/tenon/styleguides/typography/_paragraphs.html.haml
+++ b/app/views/tenon/styleguides/typography/_paragraphs.html.haml
@@ -3,7 +3,7 @@
   %h3.color-black Paragraph
   %p Includes a mixin, a variable and a class helper.
 
-  .panel.panel--block
+  .panel.panel--padded
     %p The quick brown fox jumps over the lazy dog.
     %code.expandable
       = expandable_toggle
