--- a/app/views/tenon/settings/_seo.html.haml
+++ b/app/views/tenon/settings/_seo.html.haml
@@ -1,10 +1,11 @@
 .panel-label SEO
-.panel.panel--block
-  .row
-    .inner6
-      = input_block 'META Keywords', explanation: 'These META keywords will be used by some search engines when crawling your site.  Separate keywords with a comma.  Note: Google does not factor in keywords when calculating your rank.  Other search engines may or may not.' do
-        = text_area_tag "settings[seo_keywords]", Tenon::MySettings.seo_keywords, class: 'input-block__multiline-text-field'
+.panel
+  .panel__content
+    .row
+      .inner6
+        = input_block 'META Keywords', explanation: 'These META keywords will be used by some search engines when crawling your site.  Separate keywords with a comma.  Note: Google does not factor in keywords when calculating your rank.  Other search engines may or may not.' do
+          = text_area_tag "settings[seo_keywords]", Tenon::MySettings.seo_keywords, class: 'input-block__multiline-text-field'
 
-    .inner6.omega
-      = input_block 'META Description', explanation: 'This description will show up on search engines and in some cases will affect your rank.  It should be no longer than 150-160 characters (about the length of a tweet.)' do
-        = text_area_tag "settings[seo_description]", Tenon::MySettings.seo_description, class: 'input-block__multiline-text-field'
+      .inner6.omega
+        = input_block 'META Description', explanation: 'This description will show up on search engines and in some cases will affect your rank.  It should be no longer than 150-160 characters (about the length of a tweet.)' do
+          = text_area_tag "settings[seo_description]", Tenon::MySettings.seo_description, class: 'input-block__multiline-text-field'
