--- a/app/views/tenon/styleguides/typography/_blockquote.html.haml
+++ b/app/views/tenon/styleguides/typography/_blockquote.html.haml
@@ -2,6 +2,6 @@
   %a.scroll-target{name: 'typography__blockquote'}
   %h3.color-black Blockquote
 
-  .panel.panel--block
+  .panel.panel--padded
     %blockquote The quick brown fox jumps over the lazy dog.
     %code= "<blockquote>The quick brown fox jumps over the lazy dog.</blockquote>"
