--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -74,6 +74,7 @@
 @import './modules/progress';
 @import './modules/record';
 @import './modules/search-content';
+@import './modules/tab-section';
 @import './modules/tabs';
 @import './modules/tn-content';  // bem: todo
 @import './modules/tn-embed-code';  // bem: todo
