--- a/app/assets/stylesheets/tenon/modules/tabs.scss
+++ b/app/assets/stylesheets/tenon/modules/tabs.scss
@@ -29,19 +29,21 @@
   letter-spacing: .8px;
 
   &::after {
-    @include transition(transform .25s ease);
+    @include transition(transform .25s ease, opacity .25s ease);
     @include transform(scaleX(0));
     display: block;
     position: absolute;
     bottom: 0;
+    opacity: 0;
     background-color: $tabs-underline-color;
     width: 100%;
     height: 2px;
     content: '';
-    will-change: left, right;
+    will-change: transform, opacity;
   }
 
   > a {
+    @include default-transition;
     display: block;
     transition: color .28s ease;
     width: 100%;
@@ -51,13 +53,15 @@
     color: $tabs-fg-color;
 
     &:hover {
-      color: lighten($tabs-fg-color, 20%);
+      text-decoration: none;
+      color: lighten($tabs-fg-color, 10%);
     }
   }
 }
 
 .tabs__tab--is-active::after {
   @include transform(scaleX(1));
+  opacity: 1;
 }
 
 .tabs__link--disabled {
