--- a/app/assets/stylesheets/tenon/modules/modal.scss
+++ b/app/assets/stylesheets/tenon/modules/modal.scss
@@ -1,10 +1,10 @@
 .modal {
   @extend %z-depth-4;
-  @include default-transition;
+  @include transition(opacity .25s ease, top .25s ease);
   position: fixed;
   top: 0;
   right: 0;
-  left: 0;
+  left: -9999px;
   opacity: 0;
   z-index: $z-modal;
   margin: auto;
@@ -23,6 +23,7 @@
 
 .modal--is-active {
   top: 10%;
+  left: 0;
   opacity: 1;
 }
 
@@ -35,6 +36,7 @@
 }
 
 .modal__footer {
+  border-top: 1px solid $light-border-color;
   border-radius: 0 0 2px 2px;
   background-color: $modal-bg-color;
   width: 100%;
@@ -70,7 +72,6 @@
   > .modal__footer {
     position: absolute;
     bottom: 0;
-    border-top: 1px solid $light-border-color;
   }
 }
 
