--- a/spec/dummy/app/views/tenon/post_categories/index.html.haml
+++ b/spec/dummy/app/views/tenon/post_categories/index.html.haml
@@ -4,4 +4,5 @@
     recordsPath: post_categories_path(format: 'json'),
     newPath: new_post_category_path,
     addWithModal: true,
+    editWithModal: true,
     childComponentNames: { ModalFields: 'PostCategoryFields' }
