Clean up pagination

--- a/app/assets/stylesheets/tenon/modules/btn.scss
+++ b/app/assets/stylesheets/tenon/modules/btn.scss
@@ -6,7 +6,7 @@
   position: relative;
   border: 0;
   border-radius: $default-border-radius;
-  background-color: $btn-primary-bg-color;
+  background: $btn-primary-bg-color;
   cursor: pointer;
   padding: 0 $default-spacing;
   height: $btn-height;
