--- a/app/views/tenon/shared/_util_nav.html.haml
+++ b/app/views/tenon/shared/_util_nav.html.haml
@@ -1,4 +1,4 @@
-.util-nav
+.util-nav{ class: (modifier if local_assigns[:modifier]) }
   = link_to '#!', class: 'util-nav__action-icon dropdown-button', data: { activates: 'account-dropdown'} do
     .action-icon= i('face')
 
