--- a/app/assets/stylesheets/tenon/global/reset.scss
+++ b/app/assets/stylesheets/tenon/global/reset.scss
@@ -54,3 +54,12 @@ hr {
   width: 100%;
   height: 0;
 }
+
+button {
+  border: 0;
+  border-bottom: 0;
+  background-color: transparent;
+  cursor: pointer;
+  padding: 0;
+  font: inherit;
+}
