--- a/app/assets/stylesheets/tenon/mixins/drawer.scss
+++ b/app/assets/stylesheets/tenon/mixins/drawer.scss
@@ -7,7 +7,7 @@
   border-right: 1px solid $light-border-color;
   box-shadow: inset -2px 1px 10px -6px $inset-shadow-color;
   background-color: $body-bg-color;
-  width: calc(100% - #{$default-spacing * 1.5});
+  width: 100%;
   height: 100%;
   overflow: auto;
 
